agregando el generador de insumos para upload-compressed-binary

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 !/src/cerificado-covid-19/resource/**.html
 /src/resultado-test-covid-19/resource/*
 !/src/resultado-test-covid-19/resource/**.html
+/src/compressed-binary/resource/*
