--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "ajv": "^8.8.0",
+    "archiver": "^5.3.0",
     "json2csv": "^5.0.6",
     "node-fetch": "^2.6.6"
   }
